Login y pantalla principal.
- Se crea el formulario "Login_Form" para el login.
- Se crea el formulario "Home_Form" para la pantalla principal.
- Se agregan 3 imágenes.
- Se cambia el color al borde del "jLabel_Login" del formulario de registro.
- Se agrega el evento "MouseClicked" al "jLabel_Login" del formulario de registro.
- Se agrega el evento "MouseEntered" al "jLabel_Login" del formulario de registro.
- Se configura el proyecto para que al ejecutarlo inicie por el formulario "Login_Form".

--- a/Carnes_lomito/src/vista/Register_Form.form
+++ b/Carnes_lomito/src/vista/Register_Form.form
@@ -247,6 +247,10 @@
                     </Property>
                     <Property name="text" type="java.lang.String" value="&gt;&gt; &#xbf;Ya tienes una cuenta? Iniciar sesi&#xf3;n"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel_LoginMouseClicked"/>
+                    <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel_LoginMouseEntered"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
